--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="#products">Parabooks</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">comming soon</a>
+              <a class="dropdown-item" href="#">coming soon</a>
             </div>
           </li>
         </ul>
