--- a/index.html
+++ b/index.html
@@ -118,32 +118,32 @@
           <h2 class="testihead">Working with parasite company is a dream come true.</h2>
           <img class="testipic" src="images/naveen.jpg" alt="naveen-pic">
           <em>Naveen,Chennai </em>
-          <a href="https://www.instagram.com/naveen_de_santa/" target="_blank"><i class="testicon fab fa-instagram fa-2x"></i></a>
+          <a href="https://www.instagreen_de_santa/" target="_blank"><i class="testicon fab fa-instagram fa-2x"></i></a>
         </div>
         <div class="carousel-item">
           <h2 class="testihead">Being employee of the month everytime really pumps me up.</h2>
           <img class="testipic" src="images/okash.jpg" alt="okash-pic">
           <em>Okash,Chennai </em>
-          <a href="https://www.instagram.com/adroit_akash/" target="_blank"><i class="testicon fab fa-instagram fa-2x"></i></a>
+          <a href="https://www.instacom/adroit_akash/" target="_blank"><i class="testicon fab fa-instagram fa-2x"></i></a>
         </div>
         <div class="carousel-item">
-          <h2 class="testihead">Appadidaan En Ista ***** pannuven.<br />
+          <h2 class="testihead">---<br />
             Also I send memes..</h2>
           <img class="testipic" src="images/sriram.jpg" alt="sriram-pic">
           <em>Sriram,Chennai </em>
-          <a href="https://www.instagram.com/_sriram.exe/" target="_blank"><i class="testicon fab fa-instagram fa-2x"></i></a>
+          <a href="https://www.instacom/_sriram.exe/" target="_blank"><i class="testicon fab fa-instagram fa-2x"></i></a>
         </div>
         <div class="carousel-item">
-          <h2 class="testihead">Send sedun.</h2>
+          <h2 class="testihead">----</h2>
           <img class="testipic" src="images/vijay.jpg" alt="vijay-pic">
           <em>Vijay,Chennai </em>
-          <a href="https://www.instagram.com/vijay_o6/" target="_blank"><i class="testicon fab fa-instagram fa-2x"></i></a>
+          <a href="https://www.inram.comy_o6/" target="_blank"><i class="testicon fab fa-instagram fa-2x"></i></a>
         </div>
         <div class="carousel-item">
           <h2 class="testihead">omae wa mou shindeiru.</h2>
           <img class="testipic" src="images/parthi.jpg" alt="parthiban-pic">
           <em>Parthiban,Chennai </em>
-          <a href="https://www.instagram.com/ashwin_parthiban_/" target="_blank"><i class="testicon fab fa-instagram fa-2x"></i></a>
+          <a href="https://www.instagram.com/ashrthiban_/" target="_blank"><i class="testicon fab fa-instagram fa-2x"></i></a>
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
