--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
           <a href="https://www.instacom/adroit_akash/" target="_blank"><i class="testicon fab fa-instagram fa-2x"></i></a>
         </div>
         <div class="carousel-item">
-          <h2 class="testihead">---<br />
-            Also I send memes..</h2>
+          <h2 class="testihead">---
+            =</h2>
           <img class="testipic" src="images/sriram.jpg" alt="sriram-pic">
           <em>Sriram,Chennai </em>
           <a href="https://www.instacom/_sriram.exe/" target="_blank"><i class="testicon fab fa-instagram fa-2x"></i></a>
@@ -167,9 +167,8 @@
       </div>
       <div class="col-md-8">
         <h3 class="prosubhead">Parabooks</h3>
-          <p class="workpara">Parabooks is a web tool for writers to write their story and
-            post it in our website.our website can be used for both writing
-            and reading.
+          <p class="workpara">Parabooks is online platform for 
+            reading books.
           </p>
           <button type="button" class="btn btn-light topbut">Learn More</button>
           <a href="#pricing"><button type="button" class="btn btn-outline-dark topbut">Pricing</button></a>
