--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 
     <nav class="navbar fixed-top navbar-expand-lg navbar-light" style="background-color: hsla(0, 0%, 31%, 0.2);">
-      <a class="navbar-brand" href="#"><img src="images/navlogo.png" width="40" height="40" class="d-inline-block align-top paramain" alt="" loading="lazy"> PARASITE</a>
+      <a class="navbar-brand" href="#"><img src="images/navlogo.png" width="40" height="40" class="d-inline-block align-top paramain" alt="" loading="lazy"> PARAS</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -63,7 +63,7 @@
     <div class="container-fluid mobtit">
       <div class="row">
         <div class="col-md-8">
-          <h1 class="maintil">PARASITE</h1>
+          <h1 class="maintil">PARAS</h1>
           <h2>the parasitic web developers</h2>
           <a href="#features"><button type="button" class="btn btn-light btn-lg topbut">Learn More</button></a>
           <a href="#footer"><button type="button" class="btn btn-outline-dark btn-lg topbut">Contact Us</button></a>
@@ -115,7 +115,7 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <h2 class="testihead">Working with parasite company is a dream come true.</h2>
+          <h2 class="testihead">Working with paras company is a dream come true.</h2>
           <img class="testipic" src="images/naveen.jpg" alt="naveen-pic">
           <em>Naveen,Chennai </em>
           <a href="https://www.instagreen_de_santa/" target="_blank"><i class="testicon fab fa-instagram fa-2x"></i></a>
@@ -167,7 +167,7 @@
       </div>
       <div class="col-md-8">
         <h3 class="prosubhead">Parabooks</h3>
-          <p class="workpara">Parabooks is online platform for 
+          <p class="workpara">parabooks is online platform for 
             reading books.
           </p>
           <button type="button" class="btn btn-light topbut">Learn More</button>
@@ -244,7 +244,7 @@
     <i class="social-icon fab fa-instagram"></i>
     <i class="social-icon far fa-envelope"></i>
 
-    <p class="footpara">© Copyright 2020 Parasite</p>
+    <p class="footpara">© Copyright 2020 Paras</p>
 
   </footer>
 
