--- a/index.html
+++ b/index.html
@@ -16,17 +16,21 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
   <title>Parasite</title>
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="images/favicon.ico">
 </head>
 
 <body>
+
+
 
   <section id="title">
 
     <!-------------------------- Nav Bar --------------------------------->
 
 
+
     <nav class="navbar fixed-top navbar-expand-lg navbar-light" style="background-color: hsla(0, 0%, 31%, 0.2);">
-      <a class="navbar-brand" href="#"><img src="images/navlogo.png" width="40" height="40" class="d-inline-block align-top paramain" alt="" loading="lazy"> PARAS</a>
+      <a class="navbar-brand" href="#"><img src="images/navlogo.png" width="40" height="40" class="d-inline-block align-top paramain" alt="" loading="lazy"> PARASITE</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -37,7 +41,7 @@
             <a class="nav-link" href="#footer">Contact<span class="sr-only">contact</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#pricing">Price</a>
+            <a class="nav-link" href="#pricing">API</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -46,7 +50,7 @@
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="#products">Parabooks</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">coming soon</a>
+              <a class="dropdown-item" href="#">comming soon</a>
             </div>
           </li>
         </ul>
@@ -57,13 +61,14 @@
       </div>
     </nav>
 
+
     <!--------------------------- Title------------------------------- -->
 
 
     <div class="container-fluid mobtit">
       <div class="row">
         <div class="col-md-8">
-          <h1 class="maintil">PARAS</h1>
+          <h1 class="maintil">PARASITE</h1>
           <h2>the parasitic web developers</h2>
           <a href="#features"><button type="button" class="btn btn-light btn-lg topbut">Learn More</button></a>
           <a href="#footer"><button type="button" class="btn btn-outline-dark btn-lg topbut">Contact Us</button></a>
@@ -115,35 +120,35 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <h2 class="testihead">Working with paras company is a dream come true.</h2>
+          <h2 class="testihead">Working with parasite company is a dream come true.</h2>
           <img class="testipic" src="images/naveen.jpg" alt="naveen-pic">
           <em>Naveen,Chennai </em>
-          <a href="https://www.instagreen_de_santa/" target="_blank"><i class="testicon fab fa-instagram fa-2x"></i></a>
+          <a href="https://www.instagram.com/naveen_de_santa/" target="_blank"><i class="testicon fab fa-instagram fa-2x"></i></a>
         </div>
         <div class="carousel-item">
           <h2 class="testihead">Being employee of the month everytime really pumps me up.</h2>
           <img class="testipic" src="images/okash.jpg" alt="okash-pic">
           <em>Okash,Chennai </em>
-          <a href="https://www.instacom/adroit_akash/" target="_blank"><i class="testicon fab fa-instagram fa-2x"></i></a>
+          <a href="https://www.instagram.com/adroit_akash/" target="_blank"><i class="testicon fab fa-instagram fa-2x"></i></a>
         </div>
         <div class="carousel-item">
-          <h2 class="testihead">---
-            =</h2>
+          <h2 class="testihead">Appadidaan En Ista ***** pannuven.<br />
+            Also I send memes..</h2>
           <img class="testipic" src="images/sriram.jpg" alt="sriram-pic">
           <em>Sriram,Chennai </em>
-          <a href="https://www.instacom/_sriram.exe/" target="_blank"><i class="testicon fab fa-instagram fa-2x"></i></a>
+          <a href="https://www.instagram.com/_sriram.exe/" target="_blank"><i class="testicon fab fa-instagram fa-2x"></i></a>
         </div>
         <div class="carousel-item">
-          <h2 class="testihead">----</h2>
+          <h2 class="testihead">Send sedun.</h2>
           <img class="testipic" src="images/vijay.jpg" alt="vijay-pic">
           <em>Vijay,Chennai </em>
-          <a href="https://www.inram.comy_o6/" target="_blank"><i class="testicon fab fa-instagram fa-2x"></i></a>
+          <a href="https://www.instagram.com/vijay_o6/" target="_blank"><i class="testicon fab fa-instagram fa-2x"></i></a>
         </div>
         <div class="carousel-item">
           <h2 class="testihead">omae wa mou shindeiru.</h2>
           <img class="testipic" src="images/parthi.jpg" alt="parthiban-pic">
           <em>Parthiban,Chennai </em>
-          <a href="https://www.instagram.com/ashrthiban_/" target="_blank"><i class="testicon fab fa-instagram fa-2x"></i></a>
+          <a href="https://www.instagram.com/ashwin_parthiban_/" target="_blank"><i class="testicon fab fa-instagram fa-2x"></i></a>
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -157,7 +162,7 @@
     </div>
   </section>
 
-    <!-------------------- products section -->
+  <!-------------------- products section -->
 
   <section id="products">
     <h2 class="prodhead">Our Products</h2>
@@ -167,11 +172,12 @@
       </div>
       <div class="col-md-8">
         <h3 class="prosubhead">Parabooks</h3>
-          <p class="workpara">parabooks is online platform for 
-            reading books.
-          </p>
-          <button type="button" class="btn btn-light topbut">Learn More</button>
-          <a href="#pricing"><button type="button" class="btn btn-outline-dark topbut">Pricing</button></a>
+        <p class="workpara">Parabooks is a web tool for writers to write their story and
+          post it in our website.our website can be used for both writing
+          and reading.
+        </p>
+        <button type="button" class="btn btn-light topbut">Learn More</button>
+        <a href="#pricing"><button type="button" class="btn btn-outline-dark topbut">Pricing</button></a>
 
       </div>
     </div>
@@ -195,37 +201,37 @@
           </div>
         </div>
       </div>
-        <div class="col-lg-4 col-md-6">
-          <div class="card">
-            <div class="card-header">
-              <h3 class="cardhead">Montly</h3>
-            </div>
-            <div class="card-body cardb">
-              <h2 class="cash">1$ /month</h2>
-              <p>Unlimited synonyms search</p>
-              <p>Priority email support</p>
-              <p>Help center access</p>
-              <p>Ad-free environment</p>
-              <button type="button" class="btn btn-dark btn-block blk">Get started</button>
-            </div>
+      <div class="col-lg-4 col-md-6">
+        <div class="card">
+          <div class="card-header">
+            <h3 class="cardhead">Montly</h3>
+          </div>
+          <div class="card-body cardb">
+            <h2 class="cash">1$ /month</h2>
+            <p>Unlimited synonyms search</p>
+            <p>Priority email support</p>
+            <p>Help center access</p>
+            <p>Ad-free environment</p>
+            <button type="button" class="btn btn-dark btn-block blk">Get started</button>
           </div>
         </div>
-          <div class="col-lg-4">
-            <div class="card">
-              <div class="card-header">
-                <h3 class="cardhead">Yearly</h3>
-              </div>
-              <div class="card-body cardb">
-                <h2 class="cash">0.8$ /month</h2>
-                <p>Unlimited synonyms search</p>
-                <p>Priority email support</p>
-                <p>Help center access</p>
-                <p>Ad-free environment</p>
-                <button type="button" class="btn btn-dark btn-block blk">Get started</button>
-              </div>
-            </div>
+      </div>
+      <div class="col-lg-4">
+        <div class="card">
+          <div class="card-header">
+            <h3 class="cardhead">Yearly</h3>
+          </div>
+          <div class="card-body cardb">
+            <h2 class="cash">0.8$ /month</h2>
+            <p>Unlimited synonyms search</p>
+            <p>Priority email support</p>
+            <p>Help center access</p>
+            <p>Ad-free environment</p>
+            <button type="button" class="btn btn-dark btn-block blk">Get started</button>
           </div>
         </div>
+      </div>
+    </div>
   </section>
 
   <section id="cta">
@@ -244,18 +250,11 @@
     <i class="social-icon fab fa-instagram"></i>
     <i class="social-icon far fa-envelope"></i>
 
-    <p class="footpara">© Copyright 2020 Paras</p>
+    <p class="footpara">© Copyright 2020 Parasite</p>
 
   </footer>
 
-
-
-
-
-
-
-
-
+  <script src="js/index.js" charset="utf-8"></script>
 </body>
 
 </html>
