--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
           <em>Okash,Chennai </em>
           <a href="https://www.instagram.com/adroit_akash/" target="_blank"><i class="testicon fab fa-instagram fa-2x"></i></a>
         </div>
-        <div class="carousel-item">
+<!--         <div class="carousel-item">
           <h2 class="testihead">Appadidaan En Ista ***** pannuven.<br />
             Also I send memes..</h2>
           <img class="testipic" src="images/sriram.jpg" alt="sriram-pic">
@@ -143,7 +143,7 @@
           <img class="testipic" src="images/vijay.jpg" alt="vijay-pic">
           <em>Vijay,Chennai </em>
           <a href="https://www.instagram.com/vijay_o6/" target="_blank"><i class="testicon fab fa-instagram fa-2x"></i></a>
-        </div>
+        </div> -->
         <div class="carousel-item">
           <h2 class="testihead">omae wa mou shindeiru.</h2>
           <img class="testipic" src="images/parthi.jpg" alt="parthiban-pic">
