--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-  <title>Parasite</title>
+  <title>Void</title>
   <link rel="stylesheet" href="css/styles.css">
   <link rel="icon" href="images/favicon.ico">
 </head>
@@ -30,7 +30,7 @@
 
 
     <nav class="navbar fixed-top navbar-expand-lg navbar-light" style="background-color: hsla(0, 0%, 31%, 0.2);">
-      <a class="navbar-brand" href="#"><img src="images/navlogo.png" width="40" height="40" class="d-inline-block align-top paramain" alt="" loading="lazy"> PARASITE</a>
+      <a class="navbar-brand" href="#"><img src="images/navlogo.png" width="40" height="40" class="d-inline-block align-top paramain" alt="" loading="lazy"> VOID</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -68,8 +68,8 @@
     <div class="container-fluid mobtit">
       <div class="row">
         <div class="col-md-8">
-          <h1 class="maintil">PARASITE</h1>
-          <h2>the parasitic web developers</h2>
+          <h1 class="maintil">VOID</h1>
+          <h2>We change void to something useful</h2>
           <a href="#features"><button type="button" class="btn btn-light btn-lg topbut">Learn More</button></a>
           <a href="#footer"><button type="button" class="btn btn-outline-dark btn-lg topbut">Contact Us</button></a>
           <img class="viruslogo1" src="virus.png" alt="parasite logo">
@@ -145,7 +145,7 @@
           <a href="https://www.instagram.com/vijay_o6/" target="_blank"><i class="testicon fab fa-instagram fa-2x"></i></a>
         </div> -->
         <div class="carousel-item">
-          <h2 class="testihead">omae wa mou shindeiru.</h2>
+          <h2 class="testihead">Nice work culture here</h2>
           <img class="testipic" src="images/parthi.jpg" alt="parthiban-pic">
           <em>Parthiban,Chennai </em>
           <a href="https://www.instagram.com/ashwin_parthiban_/" target="_blank"><i class="testicon fab fa-instagram fa-2x"></i></a>
@@ -250,7 +250,7 @@
     <i class="social-icon fab fa-instagram"></i>
     <i class="social-icon far fa-envelope"></i>
 
-    <p class="footpara">© Copyright 2020 Parasite</p>
+    <p class="footpara">© Copyright 2020 Void</p>
 
   </footer>
 
